<resources>
    <string name="app_name">Ayrton the Magic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_social">Social</string>
    <string name="action_settings">Info</string>
    <string name="title_activity_settings">Info</string>
    <string name="title_activity_social">Social</string>
    <string name="link"><a href="http://www.ayrtonthemagic.com">www.ayrtonthemagic.com</a></string>
    <string name="link1"><a href="http://www.mirkobastianini.com">www.mirkobastianini.com</a></string>
    <string name="link12"><a href="https://www.facebook.com/ayrtonthemagic">www.facebook.com/ayrtonthemagic</a></string>
    <string name="title_activity_morte">Ayrton The Magic</string>
    <string name="title_activity_venerdi">Friday 29 April 1994</string>
    <string name="title_activity_sabato">Saturday 30 April 1994</string>
    <string name="title_activity_domenica">Sunday 1 May 1994</string>
    <string name="morte">From man to Legend...</string>
    <string name="alfabeto">Ayrton\'s alphabet</string>
    <string name="amori">Ayrton\'s lovers</string>
    <string name="angelo">Ayrton and Angelo</string>
    <string name="auto">Ayrton\'s cars</string>
    <string name="brasile">F1 2014 Brasil</string>
    <string name="brasiliani">Brasilians and Ayrton </string>
    <string name="canzone">Ayrton - Dalla and Montevecchi</string>
    <string name="comas">Ayrton and Erik Comas</string>
    <string name="dicono">Words about him</string>
    <string name="dio">The faith in God</string>
    <string name="duespeciali">Two special people</string>
    <string name="extreme">Extreme Speed - Gran Turismo 6</string>
    <string name="film">Senna - the film</string>
    <string name="fondazione">A.S. Foundation</string>
    <string name="frasidette">He said</string>
    <string name="daricordare">Races to remember</string>
    <string name="doodle">Google Doodle</string>
    <string name="ifonly">If only</string>
    <string name="imola">Imola</string>
    <string name="benvenuto">Welcome on the official app related to www.ayrtonthemagic.com!</string>
    <string name="ioeayrton">Io and Ayrton</string>
    <string name="massimo">Ayrton and Massimo</string>
    <string name="perfect">Perfect Lap</string>
    <string name="remember">Remember Ayrton</string>
    <string name="scherzi">Jokes of Berger and Dennis</string>
    <string name="sennaVsProst">Senna vs Prost</string>
    <string name="biografia">Biography</string>
    <string name="account">Ayrton\'s account</string>
    <string name="week">Ayrton\'s week</string>
    <string name="pilota">Ayrton, the driver</string>
    <string name="man">Beco, the man</string>
    <string name="rememberA">Remember Ayrton</string>
    <string name="ioelui">Ayrton and I</string>
    <string name="diconoa">Various</string>
    <string name="diconob">Alain Prost</string>
    <string name="diconoc">Enzo ferrari</string>
    <string name="diconod">Luca di Montezemolo</string>
    <string name="diconoe">Nelson Piquet</string>
    <string name="diconof">Frank Williams</string>
    <string name="diconog">Jackie Stewart</string>
    <string name="diconoh">Ron Dennis</string>
    <string name="diconoi">Michael Schumacher</string>
    <string name="frasia">Values of life</string>
    <string name="frasib">The relationship with the risk</string>
    <string name="frasic">Competition, speed and victory</string>
    <string name="frasid">Alain Prost and J.M. Balestre</string>
    <string name="frasie">Style of driving</string>
    <string name="frasif">Past, future and dreams</string>
    <string name="frasig">Cars and team</string>
    <string name="frasih">Past and emotions</string>
    <string name="racea">Monaco 1984</string>
    <string name="raceb">Portugal 1985</string>
    <string name="racec">Japan 1988</string>
    <string name="raced">Japan 1989</string>
    <string name="racee">Japan 1990</string>
    <string name="racef">Brasil 1991</string>
    <string name="raceg">Europe 1993</string>
    <string name="exitquestion">Exit application?</string>
    <string name="exitconf">Click to exit</string>
    <string name="exityes">Yes</string>
    <string name="exitno">No</string>
    <string name="domenica1">Ayrton arrives early to the circuit and here he meets his great friend, Gerhard Berger, with which he starts a short conversation about safety on the track: they both think that hasn’t been done enough to maintain security. Something will change absolutely from the next Gran Prix because it\'s not possible to lose a human life in this way. 

He speaks a long time also with Niki Lauda; Ayrton talks again about safety on the track with him.</string>
    <string name="domenica2">02:00 pm o’clock: the race is just begun when the first collision happens; Letho\'s car doesn’t start, and Pedro Lamy isn’t unable to avoid the impact. Many parts of car injure some spectators in the stands. The Safety Car makes 5 laps on track, while the circuit is cleaned from the debris of the accident. 
\n\n\
When the Safety goes into the pits, drivers can start over their race. Ayrton is in the lead and Schumacher follows him. It looks like a race without joy and where maybe no one really want to run, but despite this, the circus goes on.
                        </string>
    <string name="domenica3">Ayrton passes from the start by accelerating to the maximum and starts the seventh lap; then he sees the Tamburello corner in front of him, a simple curve known in detail by the Brazilian. It’s 02:17 pm o’clock and Ayrton prepares to steer, but something goes wrong: the steering wheel is not responding to his commands. Desperately he tries to turn on left, by moving his head, his body, but nothing can correct that damn straight trajectory.
\n\n
Estimated speed of entry into the curve: 307 Km/h. Estimated speed of the impact: 216 Km\/h.</string>
    <string name="domenica4">A second and three tenths: an eternity. The time it takes to try to steer, to curb, to raise his hands to his chest, to close his eyes, maybe to ask God to be near him. 

                        </string>
    <string name="domenica5">The story is always the same: Sid Watkins arrives on track followed by Giuseppe la Piana and his medical staff, red flag. 
                        </string>
    <string name="domenica6">
      The gravity of the situation is clear for everyone, thus they decide to land the helicopter on track. Ayrton is extracted from the cockpit, his helmet is removed and first aid maneuvers are practiced. Sid Watkins remembers this eventin a posthumous interview: 
      \n\n
      "I\'m not religious, but when we went by Ayrton, we pulled him out and took off his helmet. There, he sighed. I had the feeling that, at that moment, his soul had flown in the sky." 

    </string>
    <string name="domenica7">The champion that everyone believed immortal was gone.</string>
    <string name="morte1">I want to tell you about the days after the death of Ayrton in a specific section. You can go through the Imola 1994 Grand Prix moments by clicking on buttons below.\n\n
        Good navigation!</string>
    <string name="sabato1">After the crash of Rubens Barrichello, twenty-seven drivers are contending for the twenty-six seats available on the grid; two of these are David Brabham and Roland Ratzenberger, who drive Simtek Ford cars, which have the lowest performances and the fight to avoid the last place, that would not give the right to take part in the Grand Prix, is close to these two drivers. 
\n\n
The accident of the previous day, even if it ended without serious consequences, left everyone very shocked: the absurd FIA’s regulation of this year remains to be tested. </string>
    <string name="sabato2">Today, as Friday, the sun shines on the Imola circuit and on the helmet of Roland Ratzenberger, while he\'s getting into his Simtek. 
Before mounting in the car, in the pits, he repeats several times to his mechanics: "I have to keep control" . 
\n\n
On the track, in the five rounds preceding the fatal one, he commits several errors: a contact with Johnny Herbert\'s Lotus, and above all, in his fifth lap, he goes off the track at the Mineral Water chicane; however, he manages to control his vehicle and to close the lap by stopping the chronometer at 1.27.584, which earned him the twenty-sixth place.
\n\n 
Ratzenberger knows that he can do it better, so he decides to take a new lap. </string>
    <string name="sabato3">After twenty minutes from the start of qualifications, Roland is on the straight track that precedes the Villeneuve curve at 300 km/h, an aerodynamic appendix comes off; he tries to steer, but the car is ungovernable. 
\n\n
The Austrian is proceeding about 316 km/h and only seven meters separate him from the wall; the Simtek undergoes a sharp deceleration that starts from the dizzying 301 km/h, then makes six spin and finally it stops destroyed in the middle of the track, about two hundred meters from the point of impact. </string>
<string name="gare1">This is the year of Formula One debut of Ayrton: in torrential rain, he brings his Toleman up to an incredible second place surpassing the best drivers, including Niki Lauda and KekeRosberg. In each lap the Brazilian recovers several seconds on the winner Prost; then, the race was interrupted because of the plenty of water on track.</string>
  <string name="gare2">After winning the pole position, Ayrton dominated the race at Estoril under a deluge, and in this way, he wins the first race of his extraordinary career in Formula 1.</string>
<string name="gare3">At the start, Ayrton did turn off the engine thus finishing at the fourteenth place, while Prost is at the command followed by Berger and Capelli. Meanwhile, it has begun to rain and Ayrton, after a great comeback, surpasses Prost during the 28th passage; the Brazilian is much faster than him: he wins the race and the world title.</string>
<string name="gare5">The rivalry between Alain Prost and Ayrton Senna is very high, even if they are teammates. They play for the title and, during the penultimate round of the season tension leads them to a duel over the regulation: at six laps from the end, Ayrton tries to overtake the French, but they clash and their cars stop. Commissioners convince the Brazilian to continue the race, and finally he wins; but when it seemed he had took the victory, the Federation disqualifies him for having cut the chicane and Prost is world champion.</string>
<string name="gare6">It is the same thing of the previous year, but with the reversed roles: if Alain Prost goes out of the point-zone, Ayrton becomes mathematically world champion. At the start, the Brazilian hits Prost, taking him off the track: Ayrton is the new world champion. After one year from the victory, in an interview, he will admit the guilt of his gesture.</string>
<string name="gare7">At the Interlagos circuit, in his native land, Ayrton is determined to win; at the start, he keeps the first position. During the 60th passage, however, it happens an unexpected situation: the change marches locks in the fourth gear. In the remaining laps the car of Ayrton continues to lose all gears except the sixth. He continues to drive until the end of the race with the gearbox locked, but this doesn’t prevent him to win; the great physical effort does not allow him to go out alone from his car.</string>
<string name="gare8">This year is not good for the Brazilian: the McLaren can\'t compete with the active suspension of Williams, which instead, thanks to the regulation of that year, is manage to dominate the season. Ayrton starts the race by the fourth place at Donington Park, when his favorite situation presents itself: it starts to rain. While everyone decelerates, the Brazilian finishes the race by surpassing totally every opponent during the last laps, except one. This race will be remembered.</string>
</resources>